--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Simulator</string>
+    <string name="cd_simulate">matches simulation button.</string>
+    <string name="cd_home_team">Home Team Image.</string>
+    <string name="txt_versus">x</string>
+    <string name="cd_away_team">Away Team Image</string>
 </resources>
